--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "copy-of-gemini-runner",
+  "name": "gemini-runner",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "lucide-react": "^0.553.0",
-    "react-dom": "^19.2.0",
-    "@react-three/postprocessing": "^3.0.4",
-    "@react-three/fiber": "^9.4.0",
-    "zustand": "^5.0.8",
-    "uuid": "^13.0.0",
-    "@react-three/drei": "^10.7.7",
-    "three": "^0.181.1",
-    "postprocessing": "^6.38.0"
+    "@react-three/drei": "^9.114.0",
+    "@react-three/fiber": "^8.17.8",
+    "@react-three/postprocessing": "^2.16.2",
+    "lucide-react": "^0.446.0",
+    "postprocessing": "^6.36.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "three": "^0.169.0",
+    "uuid": "^10.0.0",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.169.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.1"
   }
 }
